- implement authen and RBAC for CRUD endpoints (Phase 2)
